# CCR_kelp_feature_detection

./: .gitignore  CMakeLists.txt  README.md  requirements.txt  run_the_code.md
data_input/: example_percent-cover_data.csv
data_output/: 25_images_percent-cover.csv  summary_output_percent-cover.csv
data_output/image_patches_from_25_test_photos/: class_mapping.json  dataset.csv
data_output/image_patches_from_25_test_photos/train/: stats.csv
data_output/image_patches_from_25_test_photos/train/BR_encrust/: stats.csv
data_output/image_patches_from_25_test_photos/train/BR_fucus/: stats.csv
data_output/image_patches_from_25_test_photos/train/BR_sarg/: stats.csv
data_output/image_patches_from_25_test_photos/train/GR_ulva/: stats.csv
data_output/image_patches_from_25_test_photos/train/KE_5rib/: stats.csv
data_output/image_patches_from_25_test_photos/train/KE_bull/: stats.csv
data_output/image_patches_from_25_test_photos/train/KE_holdfas/: stats.csv
data_output/image_patches_from_25_test_photos/train/KE_sieve/: stats.csv
data_output/image_patches_from_25_test_photos/train/KE_stipe/: stats.csv
data_output/image_patches_from_25_test_photos/train/KE_sugar/: stats.csv
data_output/image_patches_from_25_test_photos/train/MS/: stats.csv
include/: detectors.hpp
notebooks/: features.ipynb  show_stats.ipynb
photos/edited_JPEG/: stats.csv
pipeline_results/: features_by_detector.csv  stats_by_image.csv
scripts/: features.py  pipeline.py  util.py
src/: main.cpp
temp_results/: image_1_stats.csv
(+14 files in other folders)
